# renderer

./: Cargo.toml  LICENSE  README.md
renderer/: Cargo.toml
renderer/src/: lib.rs  main.rs
renderer/src/types/: buf.rs  color.rs  mod.rs  vec.rs
renderer_macros/: Cargo.toml
renderer_macros/src/: lib.rs
renderer_types/: Cargo.toml
renderer_types/src/: buf.rs  color.rs  lib.rs  vec.rs
renderer_types/src/vec/: mod.rs  vec2.rs  vec3.rs  vec4.rs
src/: buf.rs  main.rs
